доработки после ревью. исправил Timetable и добавил тест